CSD-3708 Fix bug - Stop supervisor to see other teams